# gh-productivity

./: .gitignore  README.md  pyproject.toml  run.sh
gh_productivity/: __init__.py  ai_detector.py  analyze.py  benchmarks.py  cli.py  collect.py  loc.py  process.py  temporal.py  visualize.py
notebooks/: analysis.ipynb
