[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gh-productivity"
version = "0.1.0"
description = "GitHub productivity analysis tool with AI collaboration detection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "matplotlib>=3.7.0",
    "plotly>=5.14.0",
    "pyarrow>=12.0.0",
    "python-dateutil>=2.8.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",
]

[project.scripts]
gh-productivity = "gh_productivity.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["gh_productivity"]
